# dpic

./: .gitignore  CHANGES  Copyright.txt  INSTALL  INSTALL_Windows.txt  Makefile  Makefile.in  README  VERSIONDATE.h  backend.c  configure  dpic.c  dpic.h  dpic.tab.c  dpic.tab.h  dpic.toks  dpic.y  entryhp.h  entrytv.h  grammar.txt  lexerr.sed  lextables.awk  lxch.h  lxcst.h  lxerr.h  lxhp.h  lxnp.h  lxtv.h  lxvars.h  main.c  mfp.c  mkparscst.awk  mpo.c  parscst.h  parser.w  pdf.c  pgf.c  postprod.c  preprod.c  produce.sed  (+7 more)
autoconf/: configure.ac
doc/: Makefile  Spiral.m4  Spiral.pic  Spiral.tex  VERSION  VERSION.tex  Xtest.m4  Xtest.tex  arrow.tex  circles.tex  dpic-doc.bib  dpic-doc.tex  dpic.1  dpic.1.src  dpic_man.tex  dpictools.pic  spline.tex
examples/: Examples.txt  Makefile  README  README.txt  arrowwide.tex
examples/Escher/: EscherCube.pic  README.txt  libdp3D.pic
examples/Graphs/: Makefile  README  plotlib.pic  tgraph.pic  tst.tex
examples/Lindenmayer/: Algae1.m4  Algae2.m4  Bush1.m4  Bush2.m4  Bush3.m4  Bush4.m4  Bush5.m4  Cantor.m4  Dragon.m4  FractalPlant.m4  HexagonalGosper.m4  Koch.m4  KochCurve.m4  KochSnowflake.m4  Leaf.m4  Levycurve.m4  Lsys.conf  Makefile  OL.m4  README  SVGconfig.conf  SierpinskiArrowhead.m4  Sticks.m4  Tiles1.m4  Weed.m4  examples.htmx  test.m4  tst.tex  tstSVG.htmx
examples/illusions/: README.txt  illusions.m4
examples/sources/: Zalgebra.pic  arcs.pic  arrowmarks.pic  arrowwide.pic  basictests.pic  dpictools.pic  man.tex  man13.pic  man16.pic  (+9 more)
src/: dp0.x  dpic.x  dpic1.x  lxcst.v  pgf.x  svg.x  sysdep.c  tex.x
(+2 files in other folders)
